overflow fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,11 +497,10 @@ section {
 /* *********************** */
 .testimonial-container {
   width: 100%;
-  max-height: 350px;
-  margin: 0 auto;
+
+  margin: 10px auto;
   text-align: center;
   background-color: #f9fbfc;
-  animation: wiper 5s ease-in-out infinite;
 }
 .testimonial--feedback {
   font-size: 32px;
